--- a/php/phpunit.xml.dist
+++ b/php/phpunit.xml.dist
@@ -1,15 +1,13 @@
-<phpunit
-        bootstrap="vendor/autoload.php"
-        colors="true"
->
-    <testsuites>
-        <testsuite name="All tests">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-    <filter>
-        <whitelist>
-            <directory>src</directory>
-        </whitelist>
-    </filter>
+<?xml version="1.0"?>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" colors="true" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage>
+    <include>
+      <directory>src</directory>
+    </include>
+  </coverage>
+  <testsuites>
+    <testsuite name="All tests">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
